# traffic_agent_demo

./: .env  README.md  pyproject.toml  requirements.txt  test_api_available.py
archive/: debug_json_parser.py  simple_agent.py  smoke_test.py
src/: main.py
src/agents/: nodes.py  traffic_agent.py
src/core/: config.py  llm.py  state.py
src/tools/: maps.py  mcp_client.py  traffic_tools.py
static/: app.js  index.html  style.css
tests/: reproduce_mcp.py  verify_agent.py  verify_parallel.py
